# nsa_optim

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  MEMORY_PROFILING_REPORT.md  README.md  config.py  data.py  mamba_wrapper.py  model.py  optimizers.py  pyproject.toml  pytest.ini  requirements.txt  run_experiments.py  run_experiments.sh  setup.sh  test_memory_efficient.py  train.py  verify_chunked_loss.py
analysis/: __init__.py  analysis.py
benchmarks/: KERNEL_ANALYSIS_RESULTS.md  gpu_matmul_bench.py  kernel_benchmark.py  profile_kernels.py  profile_mamba.py  validate_kernels.py
docker/: Dockerfile
docs/: CICD_QUICK_START.md  GITLAB_CICD_SETUP.md
mamba/: __init__.py  jamba.py  mamba2.py  mamba3_chunked_scan.py  mamba3_cute_decode.py  mamba3_optimized.py  mamba3_triton.py
mamba3/: mamba3.py  mamba3_triton.py  mamba3_triton_depr.py  mamba3_triton_kernels.py
models/: __init__.py  configs.py  deltanet.py  hybrid.py  kernels.py  mamba.py  transformer.py
profile/: __init__.py
profiler/: profile_memory.py  test_chunked_loss.py
profiling/: flops.py  profile_memory.py
scripts/: setup.sh  smoke_test.sh
tests/: test_soap_diagnostics.py
tests/unit/: test_config.py  test_model.py  test_optimizers.py
